--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -9,6 +9,12 @@ $color-secondary-dark: #f9a600;
 $color-tertiary-light: #2298ff;
 $color-tertiary-dark: #5643fa;
 
+$color-fourth-light: #be1c1c;
+$color-fourth-dark: #941515;
+
+$color-green-light: #669933;
+$color-green-dark: #004518;
+
 $color-gray-light-1: #f7f7f7;
 $color-gray-light-2: #eee;
 
