--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -62,6 +62,10 @@ body {
         transform: skewX(-5deg) scale(1.1);
         text-shadow: .5rem 1rem 2rem rgba($color-black, .2);
     }
+
+    &-white {
+        color: $color-white;
+    }
 }
 
 .heading-tertiatry {
