--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -69,7 +69,7 @@
             background-image: url(../img/savr.jpg);
         }
         &--4 {
-            background-image: url(../img/mario.jpg);
+            background-image: url(../img/mario_mario.jpg);
         }
     }
     &__heading {
