--- a/css/style.css
+++ b/css/style.css
@@ -293,7 +293,7 @@ body {
     .card__picture--3 {
       background-image: url(../img/savr.jpg); }
     .card__picture--4 {
-      background-image: url(../img/mario.jpg); }
+      background-image: url(../img/mario_mario.jpg); }
   .card__heading {
     font-size: 2.2rem;
     font-weight: 300;
@@ -777,7 +777,7 @@ body {
 .book {
   background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 50%, transparent 50%), url(../img/nat-10.jpg);
   background-size: cover;
-  height: 50rem;
+  height: 56rem;
   border-radius: 3px;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.2); }
   .book__form {
