--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,8 @@
   box-sizing: inherit; }
 
 html {
-  font-size: 62.5%; }
+  font-size: 62.5%;
+  scroll-behavior: smooth; }
 
 body {
   box-sizing: border-box; }
@@ -162,6 +163,17 @@ body {
       width: 2rem;
       border-radius: 50%;
       display: block; }
+      .button--white-round i {
+        font-size: 5rem;
+        margin-bottom: 5rem;
+        margin-top: -1.1rem;
+        margin-left: -2.5rem;
+        padding-right: 1px;
+        padding-top: 1px;
+        color: #941515;
+        float: left; }
+        .button--white-round i:hover {
+          color: #f9a600; }
   .button--green {
     background-color: #287391;
     color: white; }
@@ -200,6 +212,9 @@ body {
 .btn-text:active {
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
   transform: translateY(0); }
+
+.btn-text:not(:first-child) {
+  margin-right: 4rem; }
 
 .composition {
   position: relative; }
@@ -245,6 +260,24 @@ body {
     color: transparent; }
   .feature-box:hover {
     transform: translateY(-1.5rem) scale(1.03); }
+
+.feature-language {
+  height: 4rem;
+  text-align: center; }
+  .feature-language ul {
+    list-style: none;
+    padding: 8rem 0; }
+    .feature-language ul li {
+      display: inline;
+      padding: 0 2rem;
+      transition: transform .3s; }
+      .feature-language ul li i {
+        font-size: 6rem;
+        color: rgba(255, 255, 255, 0.7); }
+        .feature-language ul li i:hover {
+          transform: translateY(-1.5rem) scale(1.03);
+          color: white;
+          text-shadow: 0 1rem 3rem rgba(3, 50, 69, 0.6); }
 
 .card {
   perspective: 150rem;
@@ -347,30 +380,33 @@ body {
     font-weight: 100; }
 
 .story {
-  width: 75%;
-  margin: 0 auto;
+  width: 100%;
+  height: 25rem;
   box-shadow: 0 3rem 6rem rgba(0, 0, 0, 0.1);
-  background-color: rgba(255, 255, 255, 0.6);
+  background-color: rgba(3, 50, 69, 0.6);
   border-radius: 3px;
-  padding: 6rem;
-  padding-left: 9rem;
-  font-size: 1.6rem;
-  transform: skewX(-12deg); }
+  border-style: solid 3px #033245;
+  padding: 2rem;
+  margin-bottom: 4rem; }
+  .story:hover {
+    background-color: rgba(3, 50, 69, 0.9); }
   .story__shape {
-    width: 15rem;
-    height: 15rem;
-    float: left;
-    -webkit-shape-outside: circle(50% at 50% 50%);
-    shape-outside: circle(50% at 50% 50%);
-    -webkit-clip-path: circle(50% at 50% 50%);
-    clip-path: circle(50% at 50% 50%);
-    transform: translateX(-3rem) skewX(12deg);
-    position: relative; }
+    top: -1rem;
+    left: -1rem;
+    width: 25rem;
+    height: 25rem;
+    border-style: solid 3px #033245;
+    -webkit-clip-path: polygon(0 0, 100% 0%, 100% 100%, 0% 100%);
+    clip-path: polygon(0 0, 100% 0%, 100% 100%, 0% 100%);
+    position: relative;
+    border-radius: 3px;
+    overflow: hidden; }
   .story__img {
     height: 100%;
-    transform: translateX(-4rem) scale(1.4);
+    transform: scale(1.4);
     backface-visibility: hidden;
-    transition: all .5s; }
+    transition: all .5s;
+    box-shadow: 0 3rem 6rem rgba(0, 0, 0, 0.1); }
   .story__text {
     transform: skewX(12deg); }
   .story__caption {
@@ -389,8 +425,8 @@ body {
     opacity: 1;
     transform: translate(-50%, -50%); }
   .story:hover .story__img {
-    transform: translateX(-4rem) scale(1);
-    filter: blur(3px) brightness(80%); }
+    transform: scale(1);
+    filter: blur(3px) brightness(60%); }
 
 .bg-video {
   position: absolute;
@@ -576,8 +612,6 @@ body {
 .row {
   max-width: 114rem;
   margin: 0 auto; }
-  .row:not(:last-child) {
-    margin-bottom: 8rem; }
   .row::after {
     content: "";
     display: table;
@@ -598,6 +632,8 @@ body {
     width: calc(2 * ((100% - 3 * 6rem) / 4) + 6rem); }
   .row .col-3-of-4 {
     width: calc(3 * ((100% - 3 * 6rem) / 4) + 2 * 6rem); }
+  .row-margin-bottom__small {
+    margin-bottom: 0; }
 
 .footer {
   background-color: #333;
@@ -753,7 +789,7 @@ body {
   margin-top: -25vh; }
 
 .section-features {
-  padding: 15rem 0 20rem 0;
+  padding: 15rem 0 30rem 0;
   background-image: linear-gradient(to right bottom, rgba(129, 188, 211, 0.8), rgba(3, 50, 69, 0.8)), url(../../img/nat-4.jpg);
   background-size: cover;
   transform: skewY(-7deg);
@@ -763,7 +799,7 @@ body {
 
 .section-tours {
   background-color: #f7f7f7;
-  padding: 25rem 0 15rem 0;
+  padding: 25rem 0 10rem 0;
   margin-top: -10rem; }
 
 .section-stories {
@@ -775,7 +811,7 @@ body {
   background-image: linear-gradient(to right bottom, #81bcd3, #033245); }
 
 .book {
-  background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 50%, transparent 50%), url(../img/nat-10.jpg);
+  background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 50%, transparent 50%), url(../img/contact_photo.jpg);
   background-size: cover;
   height: 56rem;
   border-radius: 3px;
