--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -52,7 +52,24 @@
             height: 8rem;
             width: 2rem;
             border-radius: 50%;
-            display: block;
+            display: block; 
+            
+            i {
+                font-size: 5rem;
+                margin-bottom: 5rem;
+                margin-top: -1.1rem;
+                margin-left: -2.5rem;
+                padding-right: 1px;
+                padding-top: 1px;
+                // background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
+                // -webkit-background-clip: text;
+                color: $color-fourth-dark;
+                float: left;
+
+                &:hover {
+                    color: $color-secondary-dark;
+                }
+            }
         }
     }
     &--green {
@@ -103,5 +120,8 @@
     &:active {
         box-shadow: 0 .5rem 1rem rgba($color-black,.15);
         transform: translateY(0);
+    }
+    &:not(:first-child){
+        margin-right: 4rem;
     }
 }
