--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -1,30 +1,46 @@
 .story {
-    width: 75%;
-    margin: 0 auto;
+    width: 100%;
+    height: 25rem;
+    // margin: 0 auto;
     box-shadow: 0 3rem 6rem rgba($color-black, .1);
-    background-color: rgba($color-white, .6);
+    background-color: rgba($color-primary-dark, .6);
     border-radius: 3px;
-    padding: 6rem;
-    padding-left: 9rem;
-    font-size: $default-font-size;
-    transform: skewX(-12deg);
+    border-style: solid 3px $color-primary-dark;
+    padding:2rem;
+    margin-bottom: 4rem;
+    // padding: 6rem;
+    // // padding-: 9rem;
+    // font-size: $default-font-size;
+    // // transform: skewX(-12deg);
+    &:hover {
+        background-color: rgba($color-primary-dark, .9);
+    }
 
     &__shape {
-        width: 15rem;
-        height: 15rem;
-        float: left;
-        -webkit-shape-outside: circle(50% at 50% 50%);
-        shape-outside: circle(50% at 50% 50%);
-        -webkit-clip-path: circle(50% at 50% 50%);
-        clip-path: circle(50% at 50% 50%);
-        transform: translateX(-3rem) skewX(12deg);
+        // margin-left: -12rem;
+        // margin-bottom: -7rem;
+        top: -1rem;
+        left: -1rem;
+        width: 25rem;
+        height: 25rem;
+        border-style: solid 3px $color-primary-dark;
+        // float: left;
+        // -webkit-shape-outside: circle(50% at 50% 50%);
+        // shape-outside: circle(50% at 50% 50%);
+        -webkit-clip-path: polygon(0 0, 100% 0%, 100% 100%, 0% 100%);
+        clip-path: polygon(0 0, 100% 0%, 100% 100%, 0% 100%);
+        
+        // transform: translateX(-3rem) skewX(12deg);
         position: relative;
+        border-radius: 3px;
+        overflow: hidden;
     }
     &__img {
         height: 100%;
-        transform: translateX(-4rem) scale(1.4);
+        transform: scale(1.4);
         backface-visibility: hidden;
         transition: all .5s;
+        box-shadow: 0 3rem 6rem rgba($color-black, .1);
     }
     &__text {
         transform: skewX(12deg);
@@ -47,7 +63,7 @@
         transform: translate(-50%, -50%);
     }
     &:hover &__img {
-        transform: translateX(-4rem) scale(1);
-        filter: blur(3px) brightness(80%);
+        transform: scale(1);
+        filter: blur(3px) brightness(60%);
     }
 }
