--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -3,9 +3,9 @@
     // background-color: #333;
     margin: 0 auto;
 
-    &:not(:last-child){
-        margin-bottom: $gutter-vertical;
-    }
+    // &:not(last-child){
+    //     margin-bottom: $gutter-vertical + 4rem;
+    // }
 
     @include clearfix;
 
@@ -37,6 +37,9 @@
     }
     .col-3-of-4 {
         width: calc(3 * ((100% - 3 * #{$gutter-horizontal}) / 4) + 2 * #{$gutter-horizontal});
+    }
+    &-margin-bottom__small {
+        margin-bottom: 0;
     }
 
 }
