--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -5,7 +5,7 @@
 }
 
 .section-features {
-    padding: 15rem 0 20rem 0;
+    padding: 15rem 0 30rem 0;
     background-image: linear-gradient(
         to right bottom,
          rgba($color-primary-light, 0.8),
@@ -23,7 +23,7 @@
 
 .section-tours {
     background-color: $color-gray-light-1;
-    padding: 25rem 0 15rem 0;
+    padding: 25rem 0 10rem 0;
     margin-top: - 10rem;
 
 }
@@ -42,7 +42,7 @@
     background-image: linear-gradient(105deg, 
                     rgba($color-white, .9) 0%,
                     rgba($color-white, .9) 50%,
-                    transparent 50%), url(../img/nat-10.jpg);
+                    transparent 50%), url(../img/contact_photo.jpg);
     background-size: cover;
     height: 56rem;
     border-radius: 3px;
