--- a/css/style.css
+++ b/css/style.css
@@ -7,10 +7,24 @@
 
 html {
   font-size: 62.5%;
+  width: 100vw;
   scroll-behavior: smooth; }
+  @media (min-width: 112.5em) {
+    html {
+      font-size: 75%; } }
+  @media (max-width: 75em) {
+    html {
+      font-size: 56.25%; } }
+  @media (max-width: 56.25em) {
+    html {
+      font-size: 50%; } }
 
 body {
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  padding: 3rem; }
+  @media (max-width: 56.25em) {
+    body {
+      padding: 0; } }
 
 @keyframes moveInLeft {
   0% {
@@ -43,10 +57,8 @@ body {
 body {
   font-family: "Lato", sans-serif;
   font-weight: 400;
-  /* font-size: 16px; */
   line-height: 1.7;
   color: #777;
-  padding: 3rem;
   box-sizing: border-box; }
 
 .heading-primary {
@@ -61,9 +73,12 @@ body {
     letter-spacing: 1.5rem;
     animation-name: moveInLeft;
     animation-duration: 1s;
-    /* animation-delay: 3s; */
-    /* animation-iteration-count: 3; */
     animation-timing-function: ease-out; }
+    @media (max-width: 37.5em) {
+      .heading-primary--main {
+        letter-spacing: 1rem;
+        font-size: 4rem;
+        margin-top: 12rem; } }
     .heading-primary--main:after {
       content: "";
       display: block;
@@ -80,6 +95,9 @@ body {
     animation: moveInRight 1s ease-out;
     padding-top: 2rem;
     margin-bottom: 10rem; }
+    @media (max-width: 37.5em) {
+      .heading-primary--sub {
+        letter-spacing: .5rem; } }
 
 .heading-secondary {
   font-size: 3.5rem;
@@ -91,6 +109,13 @@ body {
   color: transparent;
   letter-spacing: 2px;
   transition: all .2s; }
+  @media (max-width: 56.25em) {
+    .heading-secondary {
+      font-size: 3rem; } }
+  @media (max-width: 37.5em) {
+    .heading-secondary {
+      font-size: 2.5rem;
+      padding: 0 2rem; } }
   .heading-secondary:hover {
     transform: skewX(-5deg) scale(1.1);
     text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2); }
@@ -112,6 +137,9 @@ body {
 
 .u-margin-bottom-big {
   margin-bottom: 8rem !important; }
+  @media (max-width: 37.5em) {
+    .u-margin-bottom-big {
+      margin-bottom: 4rem !important; } }
 
 .u-margin-bottom-medium {
   margin-bottom: 4rem !important; }
@@ -141,6 +169,9 @@ body {
     height: 100%;
     transform: scale(1.5) translate(-27%, 13%);
     fill: #033245; }
+    @media (max-width: 37.5em) {
+      .button--shaka {
+        fill: #ebc143; } }
     .button--shaka:hover {
       fill: #ebc143; }
   .button:hover {
@@ -172,6 +203,9 @@ body {
         padding-top: 1px;
         color: #941515;
         float: left; }
+        @media (max-width: 37.5em) {
+          .button--white-round i {
+            font-size: 5.4rem; } }
         .button--white-round i:hover {
           color: #f9a600; }
   .button--green {
@@ -229,12 +263,25 @@ body {
     .composition__photo--p1 {
       left: 0;
       top: -2rem; }
+      @media (max-width: 37.5em) {
+        .composition__photo--p1 {
+          left: 25%;
+          top: 0rem;
+          visibility: hidden; } }
     .composition__photo--p2 {
       right: 0;
       top: 2rem; }
+      @media (max-width: 37.5em) {
+        .composition__photo--p2 {
+          visibility: hidden; } }
     .composition__photo--p3 {
       left: 20%;
       top: 10rem; }
+      @media (max-width: 37.5em) {
+        .composition__photo--p3 {
+          left: 7%;
+          top: -2rem;
+          width: 85%; } }
     .composition__photo:hover {
       outline: 1.5rem solid #287391;
       transform: scale(1.05) translateY(-0.5rem);
@@ -264,16 +311,34 @@ body {
 .feature-language {
   height: 4rem;
   text-align: center; }
+  @media (max-width: 37.5em) {
+    .feature-language {
+      padding-bottom: 15rem; } }
   .feature-language ul {
     list-style: none;
     padding: 8rem 0; }
+    @media (max-width: 75em) {
+      .feature-language ul {
+        padding: 4rem 3rem 7rem 3rem; } }
+    @media (max-width: 37.5em) {
+      .feature-language ul {
+        padding: 6rem 3rem 7rem 3rem; } }
     .feature-language ul li {
-      display: inline;
+      display: inline-block;
       padding: 0 2rem;
       transition: transform .3s; }
+      @media (max-width: 75em) {
+        .feature-language ul li {
+          padding: 0 5rem 6rem 5rem; } }
+      @media (max-width: 37.5em) {
+        .feature-language ul li {
+          padding: 0 3rem 6rem 3rem; } }
       .feature-language ul li i {
         font-size: 6rem;
         color: rgba(255, 255, 255, 0.7); }
+        @media (max-width: 37.5em) {
+          .feature-language ul li i {
+            font-size: 4.5rem; } }
         .feature-language ul li i:hover {
           transform: translateY(-1.5rem) scale(1.03);
           color: white;
@@ -284,6 +349,12 @@ body {
   -moz-perspective: 150rem;
   position: relative;
   height: 52rem; }
+  @media (max-width: 56.25em) {
+    .card {
+      height: 40rem; } }
+  @media (max-width: 75em) {
+    .card {
+      height: 40rem; } }
   .card__side {
     height: 40rem;
     transition: all .8s ease;
@@ -390,6 +461,14 @@ body {
   margin-bottom: 4rem; }
   .story:hover {
     background-color: rgba(3, 50, 69, 0.9); }
+  @media (max-width: 75em) {
+    .story {
+      height: 40rem;
+      width: 40rem; } }
+  @media (max-width: 56.25em) {
+    .story {
+      height: 33rem;
+      width: 33rem; } }
   .story__shape {
     top: -1rem;
     left: -1rem;
@@ -401,12 +480,26 @@ body {
     position: relative;
     border-radius: 3px;
     overflow: hidden; }
+    @media (max-width: 75em) {
+      .story__shape {
+        width: 105%;
+        height: 38rem; } }
+    @media (max-width: 56.25em) {
+      .story__shape {
+        width: 106%;
+        height: 31rem; } }
   .story__img {
     height: 100%;
     transform: scale(1.4);
     backface-visibility: hidden;
     transition: all .5s;
     box-shadow: 0 3rem 6rem rgba(0, 0, 0, 0.1); }
+    @media (max-width: 56.25em) {
+      .story__img {
+        width: 80%;
+        height: 80%;
+        margin-top: 10%;
+        margin-bottom: 0; } }
   .story__text {
     transform: skewX(12deg); }
   .story__caption {
@@ -479,46 +572,6 @@ body {
   visibility: hidden;
   transform: translateY(-4rem); }
 
-.form__radio-input {
-  display: none; }
-
-.form__radio-group {
-  width: 49%;
-  display: inline-block;
-  padding-bottom: 2rem; }
-
-.form__radio-label {
-  font-size: 1.6rem;
-  cursor: pointer;
-  position: relative;
-  padding-left: 4.5rem; }
-
-.form__radio-button {
-  height: 3rem;
-  width: 3rem;
-  border: 5px solid #287391;
-  border-radius: 50%;
-  display: inline-block;
-  position: absolute;
-  left: 0;
-  top: -.4rem; }
-  .form__radio-button::after {
-    content: "";
-    display: block;
-    height: 1.3rem;
-    width: 1.3rem;
-    border-radius: 50%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #287391;
-    opacity: 0;
-    transition: opacity .2s; }
-
-.form__radio-input:checked ~ .form__radio-label .form__radio-button::after {
-  opacity: 1; }
-
 .popup {
   height: 100vh;
   width: 100%;
@@ -530,6 +583,9 @@ body {
   opacity: 0;
   visibility: hidden;
   transition: all .3s; }
+  @media (max-width: 37.5em) {
+    .popup {
+      overflow: scroll; } }
   .popup__content {
     position: absolute;
     top: 50%;
@@ -544,18 +600,38 @@ body {
     opacity: 0;
     transform: translate(-50%, -50%) scale(0.25);
     transition: all .5s .2s; }
+    @media (max-width: 37.5em) {
+      .popup__content {
+        overflow: scroll;
+        width: 90%;
+        height: 95vh;
+        border-radius: 0;
+        float: left; } }
   .popup__left {
     width: 33.3333333333%;
     display: table-cell;
     vertical-align: middle; }
+    @media (max-width: 37.5em) {
+      .popup__left {
+        width: 0;
+        visibility: hidden;
+        padding: 0; } }
   .popup__right {
     width: 66.66666666667%;
     display: table-cell;
     vertical-align: middle;
     padding: 3rem 5rem; }
+    @media (max-width: 37.5em) {
+      .popup__right {
+        width: 100%;
+        display: table-cell;
+        padding: 3rem; } }
   .popup__img {
     display: block;
     width: 100%; }
+    @media (max-width: 37.5em) {
+      .popup__img {
+        visibility: hidden; } }
   .popup__text {
     font-size: 1.4rem;
     margin-bottom: 4rem;
@@ -569,6 +645,11 @@ body {
     -ms-hyphens: auto;
     -webkit-hyphens: auto;
     hyphens: auto; }
+    @media (max-width: 37.5em) {
+      .popup__text {
+        width: 100%;
+        display: block;
+        overflow: scroll; } }
   .popup:target {
     opacity: 1;
     visibility: visible; }
@@ -596,6 +677,10 @@ body {
   position: relative;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 75%, 0 100%);
   clip-path: polygon(0 0, 100% 0, 100% 75%, 0 100%); }
+  @media (max-width: 37.5em) {
+    .header {
+      -webkit-clip-path: polygon(0 0, 100% 0, 100% 90%, 0 100%);
+      clip-path: polygon(0 0, 100% 0, 100% 90%, 0 100%); } }
   .header__logo-box {
     position: absolute;
     top: 4rem;
@@ -620,6 +705,36 @@ body {
     float: left; }
     .row [class^="col-"]:not(:last-child) {
       margin-right: 6rem; }
+      @media (max-width: 75em) {
+        .row [class^="col-"]:not(:last-child) {
+          margin-right: 0;
+          margin-bottom: 3rem; } }
+      @media (max-width: 56.25em) {
+        .row [class^="col-"]:not(:last-child) {
+          margin-right: 0;
+          margin-bottom: 3rem; } }
+    @media (max-width: 75em) {
+      .row [class^="col-"] {
+        width: 45% !important;
+        padding: 3rem;
+        text-align: center;
+        margin-left: 3.5rem; } }
+    @media (max-width: 56.25em) {
+      .row [class^="col-"] {
+        width: 45% !important;
+        padding: 3rem;
+        text-align: center;
+        margin-left: 2.7rem; } }
+    @media (max-width: 37.5em) {
+      .row [class^="col-"] {
+        width: 90% !important;
+        padding: 2rem;
+        text-align: center;
+        margin-left: 2.2rem; } }
+    .row [class^="col-"]::after {
+      content: "";
+      display: table;
+      clear: both; }
   .row .col-1-of-2 {
     width: calc((100% - 6rem) / 2); }
   .row .col-1-of-3 {
@@ -640,6 +755,9 @@ body {
   padding: 10rem 0;
   font-size: 1.4rem;
   color: #f7f7f7; }
+  @media (max-width: 37.5em) {
+    .footer {
+      padding: 3rem 0; } }
   .footer__logo-box {
     text-align: center;
     margin-bottom: 8rem; }
@@ -649,6 +767,10 @@ body {
     border-top: 1px solid #777;
     padding-top: 2rem;
     display: inline-block; }
+    @media (max-width: 37.5em) {
+      .footer__navigation {
+        float: left;
+        margin-left: 22%; } }
   .footer__list {
     list-style: none; }
   .footer__item {
@@ -671,6 +793,11 @@ body {
     padding-top: 2rem;
     width: 80%;
     float: right; }
+    @media (max-width: 37.5em) {
+      .footer__copyright {
+        float: left;
+        margin-left: 9%;
+        margin-top: -10%; } }
 
 .navigation__checkbox {
   display: none; }
@@ -687,10 +814,16 @@ body {
   box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.1);
   text-align: center;
   cursor: pointer; }
+  @media (max-width: 37.5em) {
+    .navigation__button {
+      top: 3rem;
+      right: 3rem;
+      height: 6rem;
+      width: 6rem; } }
 
 .navigation__background {
-  height: 6rem;
-  width: 6rem;
+  height: 5.5rem;
+  width: 5.5rem;
   border-radius: 50%;
   position: fixed;
   top: 6.5rem;
@@ -698,6 +831,12 @@ body {
   background-image: radial-gradient(#81bcd3, #033245);
   z-index: 1000;
   transition: all 0.8s cubic-bezier(0.1, 0.395, 0.905, 0.56); }
+  @media (max-width: 37.5em) {
+    .navigation__background {
+      top: 3.5rem;
+      right: 3.5rem;
+      height: 4rem;
+      width: 4rem; } }
 
 .navigation__nav {
   height: 100vh;
@@ -751,11 +890,17 @@ body {
 .navigation__icon {
   position: relative;
   margin-top: 3.5rem; }
+  @media (max-width: 37.5em) {
+    .navigation__icon {
+      margin-top: 3rem; } }
   .navigation__icon, .navigation__icon::before, .navigation__icon::after {
-    width: 3rem;
+    width: 3.5rem;
     height: 2px;
     background-color: #333;
     display: inline-block; }
+    @media (max-width: 37.5em) {
+      .navigation__icon, .navigation__icon::before, .navigation__icon::after {
+        width: 2.5rem; } }
   .navigation__icon::before, .navigation__icon::after {
     content: "";
     position: absolute;
@@ -763,14 +908,26 @@ body {
     transition: all .2s; }
   .navigation__icon::before {
     top: -.8rem; }
+    @media (max-width: 37.5em) {
+      .navigation__icon::before {
+        top: -.8rem; } }
   .navigation__icon::after {
     top: .8rem; }
+    @media (max-width: 37.5em) {
+      .navigation__icon::after {
+        top: .8rem; } }
 
 .navigation__button:hover .navigation__icon::before {
   top: -1rem; }
+  @media (max-width: 37.5em) {
+    .navigation__button:hover .navigation__icon::before {
+      top: -.8rem; } }
 
 .navigation__button:hover .navigation__icon::after {
   top: 1rem; }
+  @media (max-width: 37.5em) {
+    .navigation__button:hover .navigation__icon::after {
+      top: .8rem; } }
 
 .navigation__checkbox:checked + .navigation__button .navigation__icon {
   background-color: transparent; }
@@ -789,7 +946,7 @@ body {
   margin-top: -25vh; }
 
 .section-features {
-  padding: 15rem 0 30rem 0;
+  padding: 10rem 0 30rem 0;
   background-image: linear-gradient(to right bottom, rgba(129, 188, 211, 0.8), rgba(3, 50, 69, 0.8)), url(../../img/nat-4.jpg);
   background-size: cover;
   transform: skewY(-7deg);
@@ -801,14 +958,23 @@ body {
   background-color: #f7f7f7;
   padding: 25rem 0 10rem 0;
   margin-top: -10rem; }
+  @media (max-width: 37.5em) {
+    .section-tours {
+      padding: 20rem 0 10rem 0; } }
 
 .section-stories {
   padding: 15rem 0;
   position: relative; }
+  @media (max-width: 37.5em) {
+    .section-stories {
+      padding: 8rem 0; } }
 
 .section-book {
   padding: 15rem 0;
   background-image: linear-gradient(to right bottom, #81bcd3, #033245); }
+  @media (max-width: 37.5em) {
+    .section-book {
+      padding: 5rem 2rem; } }
 
 .book {
   background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 50%, transparent 50%), url(../img/contact_photo.jpg);
@@ -816,6 +982,14 @@ body {
   height: 56rem;
   border-radius: 3px;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.2); }
+  @media (max-width: 37.5em) {
+    .book {
+      background-image: linear-gradient(rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 100%, transparent 50%); } }
   .book__form {
     width: 50%;
     padding: 6rem; }
+    @media (max-width: 37.5em) {
+      .book__form {
+        width: 100%;
+        padding: 3rem;
+        margin-left: 1.5rem; } }
