--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -8,10 +8,27 @@
 
 html {
     //this is what defines 1rem 
-    font-size: 62.5%;
+    font-size: 62.5%; //1 rem = 10px
+    width: 100vw;
     scroll-behavior: smooth;
+    @include respond(big-desktop) {
+        font-size: 75%; // 1 rem = 12, 12/16
+    }
+
+    @include respond(tab-land) {
+        font-size: 56.25%; //1 rem = 9px;, 9/16 = 56.25%
+    }
+    
+    @include respond(tab-port) {
+        font-size: 50%; //1 rem = 8px;, 8/16 = 50%
+    }
 }
 
 body {
     box-sizing: border-box;
+    padding: 3rem;
+
+    @include respond(tab-port) {
+        padding: 0;
+    }
 }
