--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,10 +1,8 @@
 body {
     font-family: "Lato", sans-serif;
     font-weight: 400;
-    /* font-size: 16px; */
     line-height: 1.7;
     color: $color-gray-dark;
-    padding: 3rem;
     box-sizing: border-box;
 }
 
@@ -22,9 +20,12 @@ body {
         letter-spacing: 1.5rem;
         animation-name: moveInLeft;
         animation-duration: 1s;
-        /* animation-delay: 3s; */
-        /* animation-iteration-count: 3; */
         animation-timing-function: ease-out;
+        @include respond(phone) {
+            letter-spacing: 1rem;
+            font-size: 4rem;
+            margin-top: 12rem;
+        }
 
         &:after {
             content: "";
@@ -33,6 +34,7 @@ body {
             width: 50%;
             padding-top: 2rem;
             border-bottom: 3px solid $color-primary-dark;
+
         }
     }
     &--sub {
@@ -44,6 +46,10 @@ body {
         animation: moveInRight 1s ease-out;
         padding-top: 2rem;
         margin-bottom: 10rem;
+
+        @include respond(phone) {
+            letter-spacing: .5rem;
+        }
     }
 }
 
@@ -57,6 +63,15 @@ body {
     color: transparent;
     letter-spacing: 2px;
     transition: all .2s;
+
+    @include respond(tab-port) {
+        font-size: 3rem;  
+    }
+
+    @include respond(phone) {
+        font-size: 2.5rem; 
+        padding: 0 2rem;
+    }
 
     &:hover {
         transform: skewX(-5deg) scale(1.1);
