--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -1,5 +1,10 @@
 .u-center-text{text-align: center !important;}
-.u-margin-bottom-big{margin-bottom: 8rem !important;}
+.u-margin-bottom-big{
+    margin-bottom: 8rem !important;
+    @include respond(phone){
+        margin-bottom: 4rem !important;
+    }
+}
 .u-margin-bottom-medium{margin-bottom: 4rem !important;}
 .u-margin-bottom-small{margin-bottom: 1.5rem !important;}
 
