--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -1,39 +1,45 @@
 .story {
     width: 100%;
     height: 25rem;
-    // margin: 0 auto;
     box-shadow: 0 3rem 6rem rgba($color-black, .1);
     background-color: rgba($color-primary-dark, .6);
     border-radius: 3px;
     border-style: solid 3px $color-primary-dark;
     padding:2rem;
     margin-bottom: 4rem;
-    // padding: 6rem;
-    // // padding-: 9rem;
-    // font-size: $default-font-size;
-    // // transform: skewX(-12deg);
     &:hover {
         background-color: rgba($color-primary-dark, .9);
     }
 
+    @include respond(tab-land){
+        height: 40rem;
+        width: 40rem;
+    }
+    @include respond(tab-port){
+        height: 33rem;
+        width: 33rem;
+    }
+
     &__shape {
-        // margin-left: -12rem;
-        // margin-bottom: -7rem;
         top: -1rem;
         left: -1rem;
         width: 25rem;
         height: 25rem;
         border-style: solid 3px $color-primary-dark;
-        // float: left;
-        // -webkit-shape-outside: circle(50% at 50% 50%);
-        // shape-outside: circle(50% at 50% 50%);
         -webkit-clip-path: polygon(0 0, 100% 0%, 100% 100%, 0% 100%);
         clip-path: polygon(0 0, 100% 0%, 100% 100%, 0% 100%);
-        
-        // transform: translateX(-3rem) skewX(12deg);
         position: relative;
         border-radius: 3px;
         overflow: hidden;
+
+        @include respond(tab-land){
+            width: 105%;
+            height: 38rem;
+        }
+        @include respond(tab-port){
+            width: 106%;
+            height: 31rem;
+        }
     }
     &__img {
         height: 100%;
@@ -41,6 +47,13 @@
         backface-visibility: hidden;
         transition: all .5s;
         box-shadow: 0 3rem 6rem rgba($color-black, .1);
+
+        @include respond(tab-port){
+            width: 80%;
+            height: 80%;
+            margin-top: 10%;
+            margin-bottom: 0;
+        }
     }
     &__text {
         transform: skewX(12deg);
