--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -3,6 +3,9 @@
     padding: 10rem 0;
     font-size: 1.4rem;
     color: $color-gray-light-1;
+    @include respond(phone) {
+        padding: 3rem 0;
+    }
 
     &__logo-box {
         text-align: center;
@@ -18,6 +21,10 @@
         border-top: 1px solid $color-gray-dark;
         padding-top: 2rem;
         display: inline-block;
+        @include respond(phone){
+            float: left;
+            margin-left: 22%;
+         }
     }
 
     &__list {
@@ -53,5 +60,11 @@
         padding-top: 2rem;
         width: 80%;
         float: right;
+
+        @include respond(phone){
+           float: left;
+           margin-left: 9%;
+           margin-top: -10%;
+        }
     }
 }
