--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -1,11 +1,6 @@
 .row {
     max-width: $grid-width;
-    // background-color: #333;
     margin: 0 auto;
-
-    // &:not(last-child){
-    //     margin-bottom: $gutter-vertical + 4rem;
-    // }
 
     @include clearfix;
 
@@ -18,7 +13,39 @@
 
         &:not(:last-child){
             margin-right: $gutter-horizontal;
+
+            @include respond(tab-land){
+                margin-right: 0;
+                margin-bottom: 3rem;
+            }
+            @include respond(tab-port){
+                margin-right: 0;
+                margin-bottom: 3rem;
+            }
         }
+        @include respond(tab-land){
+            width: 45% !important;
+            padding: 3rem;
+            text-align: center;
+            margin-left: 3.5rem;
+        }
+
+        @include respond(tab-port){
+            width: 45% !important;
+            padding: 3rem;
+            text-align: center;
+            margin-left: 2.7rem;
+        }
+
+        @include respond(phone){
+            width: 90% !important;
+            padding: 2rem;
+            text-align: center;
+            margin-left: 2.2rem;
+        }
+
+        @include clearfix;
+
     };
     .col-1-of-2 {
         width: calc((100% - #{$gutter-horizontal}) / 2);
