--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -5,7 +5,7 @@
 }
 
 .section-features {
-    padding: 15rem 0 30rem 0;
+    padding: 10rem 0 30rem 0;
     background-image: linear-gradient(
         to right bottom,
          rgba($color-primary-light, 0.8),
@@ -25,17 +25,27 @@
     background-color: $color-gray-light-1;
     padding: 25rem 0 10rem 0;
     margin-top: - 10rem;
+    @include respond(phone){
+        padding: 20rem 0 10rem 0;
+    }
 
 }
 
 .section-stories {
     padding: 15rem 0;
     position: relative;
+    @include respond(phone){
+        padding: 8rem 0;
+    }
 }
 
 .section-book {
     padding: 15rem 0;
     background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark);
+
+    @include respond(phone){
+        padding: 5rem 2rem;
+    }
 }
 
 .book {
@@ -48,8 +58,18 @@
     border-radius: 3px;
     box-shadow: 0 1.5rem 4rem rgba($color-black, .2);
 
+    @include respond(phone){
+        background-image: linear-gradient(rgba($color-white, .9) 0%, rgba($color-white, .9) 100%, transparent 50%);
+    }
+
     &__form {
         width: 50%;
         padding: 6rem;
+
+        @include respond(phone){
+            width: 100%;
+            padding: 3rem;
+            margin-left: 1.5rem;
+        }
     }
 }
